--- a/client/src/main/resources/Login.fxml
+++ b/client/src/main/resources/Login.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <StackPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.cloud.storage.client.LoginController">
    <children>
-      <GridPane>
+       <GridPane hgap="1.0" vgap="1.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="82.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="118.0" />
@@ -24,10 +18,13 @@
          <children>
             <Label text="Username:" />
             <Label text="Password:" GridPane.rowIndex="1" />
-            <PasswordField fx:id="password" promptText="Password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="login" promptText="Username" GridPane.columnIndex="1" />
+             <PasswordField fx:id="password" promptText="Password" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
             <Button mnemonicParsing="false" onAction="#btnSignInOnAction" text="Sign in" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
          </children>
+           <padding>
+               <Insets right="5.0"/>
+           </padding>
       </GridPane>
    </children>
   
